--- a/F_BEAST_MST.json
+++ b/F_BEAST_MST.json
@@ -151,5 +151,14 @@
         "Iwfx42Wo": "17", 
         "Z0EN6jSh": "17", 
         "cyzug01G": "beast191.png"
+    }, 
+    {
+        "3P5gCMaQ": "3", 
+        "79YMZxpD": "beast_thum201.png", 
+        "7h6SJfAH": "18", 
+        "G4L0YIB2": "阿修羅", 
+        "Iwfx42Wo": "18", 
+        "Z0EN6jSh": "18", 
+        "cyzug01G": "beast201.png"
     }
 ]
