--- a/F_BEAST_SKILL_MST.json
+++ b/F_BEAST_SKILL_MST.json
@@ -1198,5 +1198,29 @@
         "oPD4yL58": "2", 
         "q4f9IdMs": "ANM002.usm", 
         "yjY4GK3X": "1"
+    }, 
+    {
+        "0HUPxDf1": "800001800", 
+        "2kq0BpnD": "79", 
+        "5A8SmwyC": "0:12001220:2:4:0&0:12001221:1:4:0", 
+        "6uvHX2JG": "敵全体にダメージ", 
+        "76LymtEu": "11801", 
+        "7irj9hAb": "0,0,1,1", 
+        "Af2Pc0Jz": "", 
+        "G4L0YIB2": "三千大千世界", 
+        "H4zD2IQ5": "0", 
+        "Ha9G5sCS": "0,0,0,0,0,0,1,28000", 
+        "Isb1GDe2": "4", 
+        "J35nicFV": "0", 
+        "Jn6BbR2P": "0,0,0,0,0,0,0,0", 
+        "KF9Av5yX": "0", 
+        "KosY4a18": "", 
+        "PI18xnkD": "0", 
+        "a4hXTIm0": "1", 
+        "a9DvZ70c": "40:100:3:2", 
+        "aR5i4ewA": "0", 
+        "oPD4yL58": "2", 
+        "q4f9IdMs": "ASR001.usm", 
+        "yjY4GK3X": "1"
     }
 ]
