--- a/F_SEASON_EVENT_GROUP_FRIEND_LV_MST.json
+++ b/F_SEASON_EVENT_GROUP_FRIEND_LV_MST.json
@@ -1,21 +1,11 @@
 [
     {
-        "1G6xjYvf": "", 
-        "42B7MGIU": "5000101", 
-        "6uvHX2JG": "フレンド効果はありません、フレンドを増やそう！", 
-        "7oi9fet2": "0", 
-        "A6GM9HjR": "0", 
-        "Z3f0MxPT": "誰にも呼ばれなかったクポ…。<br>もっともっと頑張るクポ〜！", 
-        "dX6cor8j": "", 
-        "xXsbS83P": "0"
-    }, 
-    {
         "1G6xjYvf": "1500101,2500101,3500101,4500101,5500101,6500101,10000101,11000101", 
         "42B7MGIU": "5000101", 
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>1個</color>プレゼント！@ユニットパラメータを<color=255:204:0>1％</color>アップ！@クエストのギル獲得量を<color=255:204:0>10％</color>アップ！@クエストのユニット経験値を<color=255:204:0>5％</color>アップ！", 
         "7oi9fet2": "1", 
-        "A6GM9HjR": "1", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>この調子で頑張るクポ〜。", 
+        "A6GM9HjR": "0", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>フレンドをたくさんつくるといいことあるクポ！", 
         "dX6cor8j": "23:100:1", 
         "xXsbS83P": "1"
     }, 
@@ -105,7 +95,7 @@
         "6uvHX2JG": "体力回復薬10を<color=255:204:0>5個</color>プレゼント！@ユニットパラメータを<color=255:204:0>10％</color>アップ！@クエストのギル獲得量を<color=255:204:0>60％</color>アップ！@クエストのユニット経験値を<color=255:204:0>50％</color>アップ！", 
         "7oi9fet2": "10", 
         "A6GM9HjR": "101", 
-        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！<br>最強の助っ人だクポ〜ッ！", 
+        "Z3f0MxPT": "<param=num>回同行者に選ばれたクポ！", 
         "dX6cor8j": "23:100:5", 
         "xXsbS83P": "2147483647"
     }
