--- a/F_BEAST_CP_MST.json
+++ b/F_BEAST_CP_MST.json
@@ -198,5 +198,9 @@
     {
         "5hqFc4ey": "172", 
         "hbm8t3uK": "0,7,8,7,8,7,8,7,8,7,8,7,8,8,7,8,8,7,8,8,7,8,8,8,7,8,8,8,7,8,8,8,7,8,8,8,8,8,8,8,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,"
+    }, 
+    {
+        "5hqFc4ey": "181", 
+        "hbm8t3uK": "0,3,3,3,4,3,3,4,3,3,4,3,3,4,3,4,3,4,3,4,3,3,4,3,4,4,3,4,4,4,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,"
     }
 ]
