--- a/F_SEASON_EVENT_ABILITY_MST.json
+++ b/F_SEASON_EVENT_ABILITY_MST.json
@@ -79,6 +79,12 @@
     }, 
     {
         "25oxcKwN": "100", 
+        "3rXE9wdp": "1500200", 
+        "7WYvz1Ep": "1501", 
+        "G4L0YIB2": "シリーズ特攻攻撃+100%"
+    }, 
+    {
+        "25oxcKwN": "100", 
         "3rXE9wdp": "2000001", 
         "7WYvz1Ep": "2000", 
         "G4L0YIB2": "防御+100"
@@ -154,6 +160,12 @@
         "3rXE9wdp": "2500110", 
         "7WYvz1Ep": "2502", 
         "G4L0YIB2": "防御+10%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "2500200", 
+        "7WYvz1Ep": "2501", 
+        "G4L0YIB2": "シリーズ特攻防御+100%"
     }, 
     {
         "25oxcKwN": "100", 
@@ -235,6 +247,12 @@
     }, 
     {
         "25oxcKwN": "100", 
+        "3rXE9wdp": "3500200", 
+        "7WYvz1Ep": "3501", 
+        "G4L0YIB2": "シリーズ特攻魔力+100%"
+    }, 
+    {
+        "25oxcKwN": "100", 
         "3rXE9wdp": "4000001", 
         "7WYvz1Ep": "4000", 
         "G4L0YIB2": "精神+100"
@@ -310,6 +328,12 @@
         "3rXE9wdp": "4500110", 
         "7WYvz1Ep": "4502", 
         "G4L0YIB2": "精神+10%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "4500200", 
+        "7WYvz1Ep": "4501", 
+        "G4L0YIB2": "シリーズ特攻精神+100%"
     }, 
     {
         "25oxcKwN": "100", 
@@ -391,6 +415,12 @@
     }, 
     {
         "25oxcKwN": "100", 
+        "3rXE9wdp": "5500200", 
+        "7WYvz1Ep": "5501", 
+        "G4L0YIB2": "シリーズ特攻ＨＰ+100%"
+    }, 
+    {
+        "25oxcKwN": "100", 
         "3rXE9wdp": "6000001", 
         "7WYvz1Ep": "6000", 
         "G4L0YIB2": "MP+100"
@@ -466,6 +496,12 @@
         "3rXE9wdp": "6500110", 
         "7WYvz1Ep": "6502", 
         "G4L0YIB2": "MP+10%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "6500200", 
+        "7WYvz1Ep": "6501", 
+        "G4L0YIB2": "シリーズ特攻+100%"
     }, 
     {
         "25oxcKwN": "100", 
@@ -850,6 +886,12 @@
         "3rXE9wdp": "8016003", 
         "7WYvz1Ep": "8016", 
         "G4L0YIB2": "アルベド語辞書+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8016004", 
+        "7WYvz1Ep": "8016", 
+        "G4L0YIB2": "アルベド語辞書+200%"
     }, 
     {
         "25oxcKwN": "50", 
@@ -1246,6 +1288,30 @@
         "3rXE9wdp": "8033004", 
         "7WYvz1Ep": "8033", 
         "G4L0YIB2": "クレジットチップ+200%"
+    }, 
+    {
+        "25oxcKwN": "50", 
+        "3rXE9wdp": "8034001", 
+        "7WYvz1Ep": "8034", 
+        "G4L0YIB2": "飛竜草+50%"
+    }, 
+    {
+        "25oxcKwN": "75", 
+        "3rXE9wdp": "8034002", 
+        "7WYvz1Ep": "8034", 
+        "G4L0YIB2": "飛竜草+75%"
+    }, 
+    {
+        "25oxcKwN": "100", 
+        "3rXE9wdp": "8034003", 
+        "7WYvz1Ep": "8034", 
+        "G4L0YIB2": "飛竜草+100%"
+    }, 
+    {
+        "25oxcKwN": "200", 
+        "3rXE9wdp": "8034004", 
+        "7WYvz1Ep": "8034", 
+        "G4L0YIB2": "飛竜草+200%"
     }, 
     {
         "25oxcKwN": "50", 
