--- a/F_SEASON_EVENT_ABILITY_TYPE_MST.json
+++ b/F_SEASON_EVENT_ABILITY_TYPE_MST.json
@@ -323,8 +323,8 @@
         "6uvHX2JG": "ドロップアイテム数増加", 
         "7WYvz1Ep": "8016", 
         "89EvGKHx": "1", 
-        "G4L0YIB2": "アルベド語辞書の入手数倍率増加（MAX+600%）", 
-        "YM5b90qZ": "106303300:600", 
+        "G4L0YIB2": "アルベド語辞書の入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106303300:1200", 
         "uHG25vSN": "2"
     }, 
     {
@@ -461,6 +461,14 @@
         "89EvGKHx": "1", 
         "G4L0YIB2": "クレジットチップの入手数倍率増加（MAX+1200%）", 
         "YM5b90qZ": "106306800:1200", 
+        "uHG25vSN": "2"
+    }, 
+    {
+        "6uvHX2JG": "ドロップアイテム数増加", 
+        "7WYvz1Ep": "8034", 
+        "89EvGKHx": "1", 
+        "G4L0YIB2": "飛竜草の入手数倍率増加（MAX+1200%）", 
+        "YM5b90qZ": "106307000:1200", 
         "uHG25vSN": "2"
     }, 
     {
